full-moon/tests/roblox_cases/fail/parser/stmt_after_continue/source.lua
print("1")
continue -- this can be replaced with break/return
print("2")
